ostep-projects/initial-utilities/wzip/lint.log
93 warnings generated.
wzip.c:178:13: error: Value stored to 'succ' is never read [clang-analyzer-deadcode.DeadStores,-warnings-as-errors]
            succ = printToken(t);
            ^
wzip.c:178:13: note: Value stored to 'succ' is never read
wzip.c:210:17: error: Value stored to 'succ' is never read [clang-analyzer-deadcode.DeadStores,-warnings-as-errors]
                succ = printToken(t);  /* if nxt is new char */
                ^
wzip.c:210:17: note: Value stored to 'succ' is never read
/home/adam/Code/sysprg/ostep-projects/initial-utilities/wzip/wzip.c:241:30: error: use 'fopen' mode 'e' to set O_CLOEXEC [android-cloexec-fopen,-warnings-as-errors]
        fp = fopen(files[i], "r");
                             ^~~~
                             "re"
Suppressed 90 warnings (90 in non-user code).
Use -header-filter=.* to display errors from all non-system headers. Use -system-headers to display errors from system headers as well.
3 warnings treated as errors
